apps/httpbin/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
spec:
  rules:
  - host: httpbin.lucascajal.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-service
            port:
              number: 80
